--- a/requirements/py311-test.yaml
+++ b/requirements/py311-test.yaml
@@ -11,6 +11,8 @@ channels:
   - conda-forge
 dependencies:
   - python=3.11
+  - analphipy
+  - pandas
   - pytest
   - pytest-cov
   - pytest-sugar
