--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,7 +17,7 @@ license-files = [ "LICENSE" ]
 authors = [
     { name = "William P. Krekelberg", email = "wpk@nist.gov" },
 ]
-requires-python = ">=3.8"
+requires-python = ">=3.9"
 classifiers = [
     "Development Status :: 2 - Pre-Alpha",
     "Intended Audience :: Science/Research",
@@ -25,7 +25,6 @@ classifiers = [
     "Operating System :: OS Independent",
     "Programming Language :: Python",
     "Programming Language :: Python :: 3 :: Only",
-    "Programming Language :: Python :: 3.8",
     "Programming Language :: Python :: 3.9",
     "Programming Language :: Python :: 3.10",
     "Programming Language :: Python :: 3.11",
@@ -40,17 +39,17 @@ dynamic = [
 dependencies = [
     "analphipy",
     "pandas",
-    "typer",
+    "tqdm",
 ]
 urls.Documentation = "https://pages.nist.gov/python-packaging-tools/"
 urls.Homepage = "https://github.com/wpk-nist-gov/python-packaging-tools"
-scripts.python_packaging_tools = "python_packaging_tools.cli:main"
+scripts.mie-effective-density = "python_packaging_tools.cli:main"
 
 [dependency-groups]
 dev = [
     { include-group = "dev-extras" },
     { include-group = "mypy" },
-    # { include-group = "nbval" },
+    { include-group = "nbval" },
     { include-group = "test" },
     { include-group = "typing" },
     { include-group = "uvxrun" },
@@ -64,6 +63,7 @@ docs = [
     # myst-parser, ipython,
     "pyenchant",
     "sphinx>=5.3.0",
+    "sphinx-argparse",
     "sphinx-book-theme",
     "sphinx-click",
     "sphinx-copybutton",
@@ -97,6 +97,7 @@ typing = [
     "pandas-stubs",
     "pylint",
     "pytest",
+    "types-tqdm",
     { include-group = "uvxrun" },
 ]
 # Anything needed to run tools/uvxrun.py
@@ -177,6 +178,7 @@ files = [
     "src",
     "tests",
     "examples/data",
+    "scripts",
 ]
 show_error_codes = true
 warn_unused_ignores = true
@@ -206,6 +208,7 @@ include = [
     "src",
     "tests",
     "examples/data",
+    "scripts",
 ]
 exclude = [
     "**/__pycache__",
