--- a/requirements/py312-dev.yaml
+++ b/requirements/py312-dev.yaml
@@ -16,6 +16,7 @@ dependencies:
   - ipython
   - mypy>=1.14.0
   - nbclient>=0.10.0
+  - nbval
   - nox>=2024.4.15
   - packaging
   - pandas
@@ -25,7 +26,8 @@ dependencies:
   - pytest-cov
   - pytest-sugar
   - pytest-xdist
-  - typer
+  - tqdm
+  - types-tqdm
   - pip
   - pip:
       - pytest-accept
